add hooks; add hooks before and after for all scan; add hooks before and after to scan each pages; change rubocop config file; [rubocop] change TargetRubyVersion; [rubocop] turn off FrozenStringLiteralComment; add quit from Capybara session before and after each tests;

--- a/spec/fixtures/static_site/page1.html
+++ b/spec/fixtures/static_site/page1.html
@@ -1,6 +1,7 @@
 <html>
 <head></head>
 <body>
+  <h1>Regular links for internal resource</h1>
   <a href="/page11.html">Page 1.1</a>
   <a href="/page12.html">Page 1.2</a>
   <a href="/page13.html">Page 1.3</a>
