--- a/spec/fixtures/static_site/page2.html
+++ b/spec/fixtures/static_site/page2.html
@@ -1,6 +1,7 @@
 <html>
 <head></head>
 <body>
+  <h1>Regular links for internal resource</h1>
   <a href="/page21.html">Page 2.1</a>
   <a href="/page22.html">Page 2.2</a>
   <a href="/page23.html">Page 2.3</a>
