--- a/spec/fixtures/static_site/page4.html
+++ b/spec/fixtures/static_site/page4.html
@@ -1,6 +1,7 @@
 <html>
 <head></head>
 <body>
+<h1>Unrecognized links</h1>
 <a href="javascript://:">javascript</a>
 <a href="#">#</a>
 <a href="mailto:example@com">mailto</a>
