--- a/spec/fixtures/static_site/page6.html
+++ b/spec/fixtures/static_site/page6.html
@@ -1,6 +1,7 @@
 <html>
 <head></head>
 <body>
+<h1>Link on a nonexistent page of an internal resource</h1>
 <a href="/page9999.html">page999</a>
 </body>
 </html>
