--- a/spec/fixtures/static_site/page7.html
+++ b/spec/fixtures/static_site/page7.html
@@ -1,6 +1,7 @@
 <html>
 <head></head>
 <body>
+<h1>Link on a nonexistent page of an external resource</h1>
 <a href="http://localhost:12345/page9999.html">Github</a>
 </body>
 </html>
