--- a/spec/fixtures/static_site/page8.html
+++ b/spec/fixtures/static_site/page8.html
@@ -1,6 +1,7 @@
 <html>
 <head></head>
 <body>
+<h1>Links on same pages</h1>
 <a href="/page5.html">Page 2</a>
 <a href="/page5.html/">Page 2</a>
 <a href="/page5.html#1">Page 2</a>
