--- a/spec/fixtures/static_site/index.html
+++ b/spec/fixtures/static_site/index.html
@@ -1,6 +1,7 @@
 <html>
 <head></head>
 <body>
+  <h1>Regular links for internal resource</h1>
   <a href="/page1.html">Page 1</a>
   <a href="/page2.html">Page 2</a>
   <a href="/page3.html">Page 3</a>
